parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> root
Rule 1     root -> inicio
Rule 2     inicio -> instruccion inicio
Rule 3     inicio -> empty
Rule 4     empty -> <empty>
Rule 5     fininstru -> FIN
Rule 6     inmediato -> NUM
Rule 7     inmediato -> ID
Rule 8     inmediato -> EXPBOOL
Rule 9     operacion -> operacion1
Rule 10    operacion1 -> operacion OPBIN operacion
Rule 11    operacion1 -> PARENA operacion PARENC
Rule 12    operacion1 -> inmediato
Rule 13    opestring -> STRING
Rule 14    opestring -> operacion
Rule 15    parametro -> operacion COMA parametro
Rule 16    parametro -> operacion
Rule 17    parametros -> parametro
Rule 18    parametros -> empty
Rule 19    imprime -> PRINT PARENA opestring PARENC
Rule 20    comentario -> COMENT STRING
Rule 21    return -> RETURN opestring
Rule 22    procedimiento -> PROC ID PARENA parametros PARENC
Rule 23    asignacion -> VAR ID ASIG opestring
Rule 24    asignacion -> ID ASIG opestring
Rule 25    condicionif -> IF operacion
Rule 26    condicionelse -> ELSE
Rule 27    condicion -> condicionif
Rule 28    condicion -> condicionelse
Rule 29    ciclowhile -> WHILE PARENA operacion PARENC ENTONCES
Rule 30    ciclofor -> FOR ID IN ID
Rule 31    opeunaria -> OPUNA ID
Rule 32    preguntar -> VAR ID ASIG ASK PARENA STRING PARENC
Rule 33    preguntar -> ID ASIG ASK PARENA STRING PARENC
Rule 34    llamado -> ID PARENA parametros PARENC
Rule 35    instruccion -> procedimiento
Rule 36    instruccion -> asignacion
Rule 37    instruccion -> condicion
Rule 38    instruccion -> ciclowhile
Rule 39    instruccion -> ciclofor
Rule 40    instruccion -> opeunaria
Rule 41    instruccion -> return
Rule 42    instruccion -> comentario
Rule 43    instruccion -> imprime
Rule 44    instruccion -> preguntar
Rule 45    instruccion -> fininstru
Rule 46    instruccion -> llamado

Terminals, with rules where they appear

ASIG                 : 23 24 32 33
ASK                  : 32 33
COMA                 : 15
COMENT               : 20
ELSE                 : 26
ENTONCES             : 29
EXPBOOL              : 8
FIN                  : 5
FOR                  : 30
ID                   : 7 22 23 24 30 30 31 32 33 34
IF                   : 25
IN                   : 30
NUM                  : 6
OPBIN                : 10
OPUNA                : 31
PARENA               : 11 19 22 29 32 33 34
PARENC               : 11 19 22 29 32 33 34
PRINT                : 19
PROC                 : 22
RETURN               : 21
STRING               : 13 20 32 33
VAR                  : 23 32
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

asignacion           : 36
ciclofor             : 39
ciclowhile           : 38
comentario           : 42
condicion            : 37
condicionelse        : 28
condicionif          : 27
empty                : 3 18
fininstru            : 45
imprime              : 43
inicio               : 1 2
inmediato            : 12
instruccion          : 2
llamado              : 46
operacion            : 10 10 11 14 15 16 25 29
operacion1           : 9
opestring            : 19 21 23 24
opeunaria            : 40
parametro            : 15 17
parametros           : 22 34
preguntar            : 44
procedimiento        : 35
return               : 41
root                 : 0

Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . inicio
    (2) inicio -> . instruccion inicio
    (3) inicio -> . empty
    (35) instruccion -> . procedimiento
    (36) instruccion -> . asignacion
    (37) instruccion -> . condicion
    (38) instruccion -> . ciclowhile
    (39) instruccion -> . ciclofor
    (40) instruccion -> . opeunaria
    (41) instruccion -> . return
    (42) instruccion -> . comentario
    (43) instruccion -> . imprime
    (44) instruccion -> . preguntar
    (45) instruccion -> . fininstru
    (46) instruccion -> . llamado
    (4) empty -> .
    (22) procedimiento -> . PROC ID PARENA parametros PARENC
    (23) asignacion -> . VAR ID ASIG opestring
    (24) asignacion -> . ID ASIG opestring
    (27) condicion -> . condicionif
    (28) condicion -> . condicionelse
    (29) ciclowhile -> . WHILE PARENA operacion PARENC ENTONCES
    (30) ciclofor -> . FOR ID IN ID
    (31) opeunaria -> . OPUNA ID
    (21) return -> . RETURN opestring
    (20) comentario -> . COMENT STRING
    (19) imprime -> . PRINT PARENA opestring PARENC
    (32) preguntar -> . VAR ID ASIG ASK PARENA STRING PARENC
    (33) preguntar -> . ID ASIG ASK PARENA STRING PARENC
    (5) fininstru -> . FIN
    (34) llamado -> . ID PARENA parametros PARENC
    (25) condicionif -> . IF operacion
    (26) condicionelse -> . ELSE

    $end            reduce using rule 4 (empty -> .)
    PROC            shift and go to state 30
    VAR             shift and go to state 20
    ID              shift and go to state 22
    WHILE           shift and go to state 28
    FOR             shift and go to state 17
    OPUNA           shift and go to state 10
    RETURN          shift and go to state 2
    COMENT          shift and go to state 1
    PRINT           shift and go to state 5
    FIN             shift and go to state 21
    IF              shift and go to state 23
    ELSE            shift and go to state 19

    opeunaria                      shift and go to state 24
    return                         shift and go to state 16
    asignacion                     shift and go to state 25
    preguntar                      shift and go to state 8
    instruccion                    shift and go to state 27
    ciclofor                       shift and go to state 18
    comentario                     shift and go to state 7
    condicion                      shift and go to state 11
    condicionelse                  shift and go to state 3
    procedimiento                  shift and go to state 4
    inicio                         shift and go to state 13
    condicionif                    shift and go to state 29
    imprime                        shift and go to state 6
    llamado                        shift and go to state 15
    root                           shift and go to state 26
    ciclowhile                     shift and go to state 9
    empty                          shift and go to state 14
    fininstru                      shift and go to state 12

state 1

    (20) comentario -> COMENT . STRING

    STRING          shift and go to state 31


state 2

    (21) return -> RETURN . opestring
    (13) opestring -> . STRING
    (14) opestring -> . operacion
    (9) operacion -> . operacion1
    (10) operacion1 -> . operacion OPBIN operacion
    (11) operacion1 -> . PARENA operacion PARENC
    (12) operacion1 -> . inmediato
    (6) inmediato -> . NUM
    (7) inmediato -> . ID
    (8) inmediato -> . EXPBOOL

    STRING          shift and go to state 33
    PARENA          shift and go to state 37
    NUM             shift and go to state 35
    ID              shift and go to state 39
    EXPBOOL         shift and go to state 40

    operacion1                     shift and go to state 36
    inmediato                      shift and go to state 38
    opestring                      shift and go to state 32
    operacion                      shift and go to state 34

state 3

    (28) condicion -> condicionelse .

    PROC            reduce using rule 28 (condicion -> condicionelse .)
    VAR             reduce using rule 28 (condicion -> condicionelse .)
    ID              reduce using rule 28 (condicion -> condicionelse .)
    WHILE           reduce using rule 28 (condicion -> condicionelse .)
    FOR             reduce using rule 28 (condicion -> condicionelse .)
    OPUNA           reduce using rule 28 (condicion -> condicionelse .)
    RETURN          reduce using rule 28 (condicion -> condicionelse .)
    COMENT          reduce using rule 28 (condicion -> condicionelse .)
    PRINT           reduce using rule 28 (condicion -> condicionelse .)
    FIN             reduce using rule 28 (condicion -> condicionelse .)
    IF              reduce using rule 28 (condicion -> condicionelse .)
    ELSE            reduce using rule 28 (condicion -> condicionelse .)
    $end            reduce using rule 28 (condicion -> condicionelse .)


state 4

    (35) instruccion -> procedimiento .

    PROC            reduce using rule 35 (instruccion -> procedimiento .)
    VAR             reduce using rule 35 (instruccion -> procedimiento .)
    ID              reduce using rule 35 (instruccion -> procedimiento .)
    WHILE           reduce using rule 35 (instruccion -> procedimiento .)
    FOR             reduce using rule 35 (instruccion -> procedimiento .)
    OPUNA           reduce using rule 35 (instruccion -> procedimiento .)
    RETURN          reduce using rule 35 (instruccion -> procedimiento .)
    COMENT          reduce using rule 35 (instruccion -> procedimiento .)
    PRINT           reduce using rule 35 (instruccion -> procedimiento .)
    FIN             reduce using rule 35 (instruccion -> procedimiento .)
    IF              reduce using rule 35 (instruccion -> procedimiento .)
    ELSE            reduce using rule 35 (instruccion -> procedimiento .)
    $end            reduce using rule 35 (instruccion -> procedimiento .)


state 5

    (19) imprime -> PRINT . PARENA opestring PARENC

    PARENA          shift and go to state 41


state 6

    (43) instruccion -> imprime .

    PROC            reduce using rule 43 (instruccion -> imprime .)
    VAR             reduce using rule 43 (instruccion -> imprime .)
    ID              reduce using rule 43 (instruccion -> imprime .)
    WHILE           reduce using rule 43 (instruccion -> imprime .)
    FOR             reduce using rule 43 (instruccion -> imprime .)
    OPUNA           reduce using rule 43 (instruccion -> imprime .)
    RETURN          reduce using rule 43 (instruccion -> imprime .)
    COMENT          reduce using rule 43 (instruccion -> imprime .)
    PRINT           reduce using rule 43 (instruccion -> imprime .)
    FIN             reduce using rule 43 (instruccion -> imprime .)
    IF              reduce using rule 43 (instruccion -> imprime .)
    ELSE            reduce using rule 43 (instruccion -> imprime .)
    $end            reduce using rule 43 (instruccion -> imprime .)


state 7

    (42) instruccion -> comentario .

    PROC            reduce using rule 42 (instruccion -> comentario .)
    VAR             reduce using rule 42 (instruccion -> comentario .)
    ID              reduce using rule 42 (instruccion -> comentario .)
    WHILE           reduce using rule 42 (instruccion -> comentario .)
    FOR             reduce using rule 42 (instruccion -> comentario .)
    OPUNA           reduce using rule 42 (instruccion -> comentario .)
    RETURN          reduce using rule 42 (instruccion -> comentario .)
    COMENT          reduce using rule 42 (instruccion -> comentario .)
    PRINT           reduce using rule 42 (instruccion -> comentario .)
    FIN             reduce using rule 42 (instruccion -> comentario .)
    IF              reduce using rule 42 (instruccion -> comentario .)
    ELSE            reduce using rule 42 (instruccion -> comentario .)
    $end            reduce using rule 42 (instruccion -> comentario .)


state 8

    (44) instruccion -> preguntar .

    PROC            reduce using rule 44 (instruccion -> preguntar .)
    VAR             reduce using rule 44 (instruccion -> preguntar .)
    ID              reduce using rule 44 (instruccion -> preguntar .)
    WHILE           reduce using rule 44 (instruccion -> preguntar .)
    FOR             reduce using rule 44 (instruccion -> preguntar .)
    OPUNA           reduce using rule 44 (instruccion -> preguntar .)
    RETURN          reduce using rule 44 (instruccion -> preguntar .)
    COMENT          reduce using rule 44 (instruccion -> preguntar .)
    PRINT           reduce using rule 44 (instruccion -> preguntar .)
    FIN             reduce using rule 44 (instruccion -> preguntar .)
    IF              reduce using rule 44 (instruccion -> preguntar .)
    ELSE            reduce using rule 44 (instruccion -> preguntar .)
    $end            reduce using rule 44 (instruccion -> preguntar .)


state 9

    (38) instruccion -> ciclowhile .

    PROC            reduce using rule 38 (instruccion -> ciclowhile .)
    VAR             reduce using rule 38 (instruccion -> ciclowhile .)
    ID              reduce using rule 38 (instruccion -> ciclowhile .)
    WHILE           reduce using rule 38 (instruccion -> ciclowhile .)
    FOR             reduce using rule 38 (instruccion -> ciclowhile .)
    OPUNA           reduce using rule 38 (instruccion -> ciclowhile .)
    RETURN          reduce using rule 38 (instruccion -> ciclowhile .)
    COMENT          reduce using rule 38 (instruccion -> ciclowhile .)
    PRINT           reduce using rule 38 (instruccion -> ciclowhile .)
    FIN             reduce using rule 38 (instruccion -> ciclowhile .)
    IF              reduce using rule 38 (instruccion -> ciclowhile .)
    ELSE            reduce using rule 38 (instruccion -> ciclowhile .)
    $end            reduce using rule 38 (instruccion -> ciclowhile .)


state 10

    (31) opeunaria -> OPUNA . ID

    ID              shift and go to state 42


state 11

    (37) instruccion -> condicion .

    PROC            reduce using rule 37 (instruccion -> condicion .)
    VAR             reduce using rule 37 (instruccion -> condicion .)
    ID              reduce using rule 37 (instruccion -> condicion .)
    WHILE           reduce using rule 37 (instruccion -> condicion .)
    FOR             reduce using rule 37 (instruccion -> condicion .)
    OPUNA           reduce using rule 37 (instruccion -> condicion .)
    RETURN          reduce using rule 37 (instruccion -> condicion .)
    COMENT          reduce using rule 37 (instruccion -> condicion .)
    PRINT           reduce using rule 37 (instruccion -> condicion .)
    FIN             reduce using rule 37 (instruccion -> condicion .)
    IF              reduce using rule 37 (instruccion -> condicion .)
    ELSE            reduce using rule 37 (instruccion -> condicion .)
    $end            reduce using rule 37 (instruccion -> condicion .)


state 12

    (45) instruccion -> fininstru .

    PROC            reduce using rule 45 (instruccion -> fininstru .)
    VAR             reduce using rule 45 (instruccion -> fininstru .)
    ID              reduce using rule 45 (instruccion -> fininstru .)
    WHILE           reduce using rule 45 (instruccion -> fininstru .)
    FOR             reduce using rule 45 (instruccion -> fininstru .)
    OPUNA           reduce using rule 45 (instruccion -> fininstru .)
    RETURN          reduce using rule 45 (instruccion -> fininstru .)
    COMENT          reduce using rule 45 (instruccion -> fininstru .)
    PRINT           reduce using rule 45 (instruccion -> fininstru .)
    FIN             reduce using rule 45 (instruccion -> fininstru .)
    IF              reduce using rule 45 (instruccion -> fininstru .)
    ELSE            reduce using rule 45 (instruccion -> fininstru .)
    $end            reduce using rule 45 (instruccion -> fininstru .)


state 13

    (1) root -> inicio .

    $end            reduce using rule 1 (root -> inicio .)


state 14

    (3) inicio -> empty .

    $end            reduce using rule 3 (inicio -> empty .)


state 15

    (46) instruccion -> llamado .

    PROC            reduce using rule 46 (instruccion -> llamado .)
    VAR             reduce using rule 46 (instruccion -> llamado .)
    ID              reduce using rule 46 (instruccion -> llamado .)
    WHILE           reduce using rule 46 (instruccion -> llamado .)
    FOR             reduce using rule 46 (instruccion -> llamado .)
    OPUNA           reduce using rule 46 (instruccion -> llamado .)
    RETURN          reduce using rule 46 (instruccion -> llamado .)
    COMENT          reduce using rule 46 (instruccion -> llamado .)
    PRINT           reduce using rule 46 (instruccion -> llamado .)
    FIN             reduce using rule 46 (instruccion -> llamado .)
    IF              reduce using rule 46 (instruccion -> llamado .)
    ELSE            reduce using rule 46 (instruccion -> llamado .)
    $end            reduce using rule 46 (instruccion -> llamado .)


state 16

    (41) instruccion -> return .

    PROC            reduce using rule 41 (instruccion -> return .)
    VAR             reduce using rule 41 (instruccion -> return .)
    ID              reduce using rule 41 (instruccion -> return .)
    WHILE           reduce using rule 41 (instruccion -> return .)
    FOR             reduce using rule 41 (instruccion -> return .)
    OPUNA           reduce using rule 41 (instruccion -> return .)
    RETURN          reduce using rule 41 (instruccion -> return .)
    COMENT          reduce using rule 41 (instruccion -> return .)
    PRINT           reduce using rule 41 (instruccion -> return .)
    FIN             reduce using rule 41 (instruccion -> return .)
    IF              reduce using rule 41 (instruccion -> return .)
    ELSE            reduce using rule 41 (instruccion -> return .)
    $end            reduce using rule 41 (instruccion -> return .)


state 17

    (30) ciclofor -> FOR . ID IN ID

    ID              shift and go to state 43


state 18

    (39) instruccion -> ciclofor .

    PROC            reduce using rule 39 (instruccion -> ciclofor .)
    VAR             reduce using rule 39 (instruccion -> ciclofor .)
    ID              reduce using rule 39 (instruccion -> ciclofor .)
    WHILE           reduce using rule 39 (instruccion -> ciclofor .)
    FOR             reduce using rule 39 (instruccion -> ciclofor .)
    OPUNA           reduce using rule 39 (instruccion -> ciclofor .)
    RETURN          reduce using rule 39 (instruccion -> ciclofor .)
    COMENT          reduce using rule 39 (instruccion -> ciclofor .)
    PRINT           reduce using rule 39 (instruccion -> ciclofor .)
    FIN             reduce using rule 39 (instruccion -> ciclofor .)
    IF              reduce using rule 39 (instruccion -> ciclofor .)
    ELSE            reduce using rule 39 (instruccion -> ciclofor .)
    $end            reduce using rule 39 (instruccion -> ciclofor .)


state 19

    (26) condicionelse -> ELSE .

    PROC            reduce using rule 26 (condicionelse -> ELSE .)
    VAR             reduce using rule 26 (condicionelse -> ELSE .)
    ID              reduce using rule 26 (condicionelse -> ELSE .)
    WHILE           reduce using rule 26 (condicionelse -> ELSE .)
    FOR             reduce using rule 26 (condicionelse -> ELSE .)
    OPUNA           reduce using rule 26 (condicionelse -> ELSE .)
    RETURN          reduce using rule 26 (condicionelse -> ELSE .)
    COMENT          reduce using rule 26 (condicionelse -> ELSE .)
    PRINT           reduce using rule 26 (condicionelse -> ELSE .)
    FIN             reduce using rule 26 (condicionelse -> ELSE .)
    IF              reduce using rule 26 (condicionelse -> ELSE .)
    ELSE            reduce using rule 26 (condicionelse -> ELSE .)
    $end            reduce using rule 26 (condicionelse -> ELSE .)


state 20

    (23) asignacion -> VAR . ID ASIG opestring
    (32) preguntar -> VAR . ID ASIG ASK PARENA STRING PARENC

    ID              shift and go to state 44


state 21

    (5) fininstru -> FIN .

    PROC            reduce using rule 5 (fininstru -> FIN .)
    VAR             reduce using rule 5 (fininstru -> FIN .)
    ID              reduce using rule 5 (fininstru -> FIN .)
    WHILE           reduce using rule 5 (fininstru -> FIN .)
    FOR             reduce using rule 5 (fininstru -> FIN .)
    OPUNA           reduce using rule 5 (fininstru -> FIN .)
    RETURN          reduce using rule 5 (fininstru -> FIN .)
    COMENT          reduce using rule 5 (fininstru -> FIN .)
    PRINT           reduce using rule 5 (fininstru -> FIN .)
    FIN             reduce using rule 5 (fininstru -> FIN .)
    IF              reduce using rule 5 (fininstru -> FIN .)
    ELSE            reduce using rule 5 (fininstru -> FIN .)
    $end            reduce using rule 5 (fininstru -> FIN .)


state 22

    (24) asignacion -> ID . ASIG opestring
    (33) preguntar -> ID . ASIG ASK PARENA STRING PARENC
    (34) llamado -> ID . PARENA parametros PARENC

    ASIG            shift and go to state 45
    PARENA          shift and go to state 46


state 23

    (25) condicionif -> IF . operacion
    (9) operacion -> . operacion1
    (10) operacion1 -> . operacion OPBIN operacion
    (11) operacion1 -> . PARENA operacion PARENC
    (12) operacion1 -> . inmediato
    (6) inmediato -> . NUM
    (7) inmediato -> . ID
    (8) inmediato -> . EXPBOOL

    PARENA          shift and go to state 37
    NUM             shift and go to state 35
    ID              shift and go to state 39
    EXPBOOL         shift and go to state 40

    operacion1                     shift and go to state 36
    inmediato                      shift and go to state 38
    operacion                      shift and go to state 47

state 24

    (40) instruccion -> opeunaria .

    PROC            reduce using rule 40 (instruccion -> opeunaria .)
    VAR             reduce using rule 40 (instruccion -> opeunaria .)
    ID              reduce using rule 40 (instruccion -> opeunaria .)
    WHILE           reduce using rule 40 (instruccion -> opeunaria .)
    FOR             reduce using rule 40 (instruccion -> opeunaria .)
    OPUNA           reduce using rule 40 (instruccion -> opeunaria .)
    RETURN          reduce using rule 40 (instruccion -> opeunaria .)
    COMENT          reduce using rule 40 (instruccion -> opeunaria .)
    PRINT           reduce using rule 40 (instruccion -> opeunaria .)
    FIN             reduce using rule 40 (instruccion -> opeunaria .)
    IF              reduce using rule 40 (instruccion -> opeunaria .)
    ELSE            reduce using rule 40 (instruccion -> opeunaria .)
    $end            reduce using rule 40 (instruccion -> opeunaria .)


state 25

    (36) instruccion -> asignacion .

    PROC            reduce using rule 36 (instruccion -> asignacion .)
    VAR             reduce using rule 36 (instruccion -> asignacion .)
    ID              reduce using rule 36 (instruccion -> asignacion .)
    WHILE           reduce using rule 36 (instruccion -> asignacion .)
    FOR             reduce using rule 36 (instruccion -> asignacion .)
    OPUNA           reduce using rule 36 (instruccion -> asignacion .)
    RETURN          reduce using rule 36 (instruccion -> asignacion .)
    COMENT          reduce using rule 36 (instruccion -> asignacion .)
    PRINT           reduce using rule 36 (instruccion -> asignacion .)
    FIN             reduce using rule 36 (instruccion -> asignacion .)
    IF              reduce using rule 36 (instruccion -> asignacion .)
    ELSE            reduce using rule 36 (instruccion -> asignacion .)
    $end            reduce using rule 36 (instruccion -> asignacion .)


state 26

    (0) S' -> root .



state 27

    (2) inicio -> instruccion . inicio
    (2) inicio -> . instruccion inicio
    (3) inicio -> . empty
    (35) instruccion -> . procedimiento
    (36) instruccion -> . asignacion
    (37) instruccion -> . condicion
    (38) instruccion -> . ciclowhile
    (39) instruccion -> . ciclofor
    (40) instruccion -> . opeunaria
    (41) instruccion -> . return
    (42) instruccion -> . comentario
    (43) instruccion -> . imprime
    (44) instruccion -> . preguntar
    (45) instruccion -> . fininstru
    (46) instruccion -> . llamado
    (4) empty -> .
    (22) procedimiento -> . PROC ID PARENA parametros PARENC
    (23) asignacion -> . VAR ID ASIG opestring
    (24) asignacion -> . ID ASIG opestring
    (27) condicion -> . condicionif
    (28) condicion -> . condicionelse
    (29) ciclowhile -> . WHILE PARENA operacion PARENC ENTONCES
    (30) ciclofor -> . FOR ID IN ID
    (31) opeunaria -> . OPUNA ID
    (21) return -> . RETURN opestring
    (20) comentario -> . COMENT STRING
    (19) imprime -> . PRINT PARENA opestring PARENC
    (32) preguntar -> . VAR ID ASIG ASK PARENA STRING PARENC
    (33) preguntar -> . ID ASIG ASK PARENA STRING PARENC
    (5) fininstru -> . FIN
    (34) llamado -> . ID PARENA parametros PARENC
    (25) condicionif -> . IF operacion
    (26) condicionelse -> . ELSE

    $end            reduce using rule 4 (empty -> .)
    PROC            shift and go to state 30
    VAR             shift and go to state 20
    ID              shift and go to state 22
    WHILE           shift and go to state 28
    FOR             shift and go to state 17
    OPUNA           shift and go to state 10
    RETURN          shift and go to state 2
    COMENT          shift and go to state 1
    PRINT           shift and go to state 5
    FIN             shift and go to state 21
    IF              shift and go to state 23
    ELSE            shift and go to state 19

    opeunaria                      shift and go to state 24
    return                         shift and go to state 16
    asignacion                     shift and go to state 25
    preguntar                      shift and go to state 8
    instruccion                    shift and go to state 27
    ciclofor                       shift and go to state 18
    comentario                     shift and go to state 7
    condicion                      shift and go to state 11
    condicionelse                  shift and go to state 3
    procedimiento                  shift and go to state 4
    inicio                         shift and go to state 48
    condicionif                    shift and go to state 29
    imprime                        shift and go to state 6
    llamado                        shift and go to state 15
    ciclowhile                     shift and go to state 9
    empty                          shift and go to state 14
    fininstru                      shift and go to state 12

state 28

    (29) ciclowhile -> WHILE . PARENA operacion PARENC ENTONCES

    PARENA          shift and go to state 49


state 29

    (27) condicion -> condicionif .

    PROC            reduce using rule 27 (condicion -> condicionif .)
    VAR             reduce using rule 27 (condicion -> condicionif .)
    ID              reduce using rule 27 (condicion -> condicionif .)
    WHILE           reduce using rule 27 (condicion -> condicionif .)
    FOR             reduce using rule 27 (condicion -> condicionif .)
    OPUNA           reduce using rule 27 (condicion -> condicionif .)
    RETURN          reduce using rule 27 (condicion -> condicionif .)
    COMENT          reduce using rule 27 (condicion -> condicionif .)
    PRINT           reduce using rule 27 (condicion -> condicionif .)
    FIN             reduce using rule 27 (condicion -> condicionif .)
    IF              reduce using rule 27 (condicion -> condicionif .)
    ELSE            reduce using rule 27 (condicion -> condicionif .)
    $end            reduce using rule 27 (condicion -> condicionif .)


state 30

    (22) procedimiento -> PROC . ID PARENA parametros PARENC

    ID              shift and go to state 50


state 31

    (20) comentario -> COMENT STRING .

    PROC            reduce using rule 20 (comentario -> COMENT STRING .)
    VAR             reduce using rule 20 (comentario -> COMENT STRING .)
    ID              reduce using rule 20 (comentario -> COMENT STRING .)
    WHILE           reduce using rule 20 (comentario -> COMENT STRING .)
    FOR             reduce using rule 20 (comentario -> COMENT STRING .)
    OPUNA           reduce using rule 20 (comentario -> COMENT STRING .)
    RETURN          reduce using rule 20 (comentario -> COMENT STRING .)
    COMENT          reduce using rule 20 (comentario -> COMENT STRING .)
    PRINT           reduce using rule 20 (comentario -> COMENT STRING .)
    FIN             reduce using rule 20 (comentario -> COMENT STRING .)
    IF              reduce using rule 20 (comentario -> COMENT STRING .)
    ELSE            reduce using rule 20 (comentario -> COMENT STRING .)
    $end            reduce using rule 20 (comentario -> COMENT STRING .)


state 32

    (21) return -> RETURN opestring .

    PROC            reduce using rule 21 (return -> RETURN opestring .)
    VAR             reduce using rule 21 (return -> RETURN opestring .)
    ID              reduce using rule 21 (return -> RETURN opestring .)
    WHILE           reduce using rule 21 (return -> RETURN opestring .)
    FOR             reduce using rule 21 (return -> RETURN opestring .)
    OPUNA           reduce using rule 21 (return -> RETURN opestring .)
    RETURN          reduce using rule 21 (return -> RETURN opestring .)
    COMENT          reduce using rule 21 (return -> RETURN opestring .)
    PRINT           reduce using rule 21 (return -> RETURN opestring .)
    FIN             reduce using rule 21 (return -> RETURN opestring .)
    IF              reduce using rule 21 (return -> RETURN opestring .)
    ELSE            reduce using rule 21 (return -> RETURN opestring .)
    $end            reduce using rule 21 (return -> RETURN opestring .)


state 33

    (13) opestring -> STRING .

    PROC            reduce using rule 13 (opestring -> STRING .)
    VAR             reduce using rule 13 (opestring -> STRING .)
    ID              reduce using rule 13 (opestring -> STRING .)
    WHILE           reduce using rule 13 (opestring -> STRING .)
    FOR             reduce using rule 13 (opestring -> STRING .)
    OPUNA           reduce using rule 13 (opestring -> STRING .)
    RETURN          reduce using rule 13 (opestring -> STRING .)
    COMENT          reduce using rule 13 (opestring -> STRING .)
    PRINT           reduce using rule 13 (opestring -> STRING .)
    FIN             reduce using rule 13 (opestring -> STRING .)
    IF              reduce using rule 13 (opestring -> STRING .)
    ELSE            reduce using rule 13 (opestring -> STRING .)
    $end            reduce using rule 13 (opestring -> STRING .)
    PARENC          reduce using rule 13 (opestring -> STRING .)


state 34

    (14) opestring -> operacion .
    (10) operacion1 -> operacion . OPBIN operacion

    PROC            reduce using rule 14 (opestring -> operacion .)
    VAR             reduce using rule 14 (opestring -> operacion .)
    ID              reduce using rule 14 (opestring -> operacion .)
    WHILE           reduce using rule 14 (opestring -> operacion .)
    FOR             reduce using rule 14 (opestring -> operacion .)
    OPUNA           reduce using rule 14 (opestring -> operacion .)
    RETURN          reduce using rule 14 (opestring -> operacion .)
    COMENT          reduce using rule 14 (opestring -> operacion .)
    PRINT           reduce using rule 14 (opestring -> operacion .)
    FIN             reduce using rule 14 (opestring -> operacion .)
    IF              reduce using rule 14 (opestring -> operacion .)
    ELSE            reduce using rule 14 (opestring -> operacion .)
    $end            reduce using rule 14 (opestring -> operacion .)
    PARENC          reduce using rule 14 (opestring -> operacion .)
    OPBIN           shift and go to state 51


state 35

    (6) inmediato -> NUM .

    OPBIN           reduce using rule 6 (inmediato -> NUM .)
    PROC            reduce using rule 6 (inmediato -> NUM .)
    VAR             reduce using rule 6 (inmediato -> NUM .)
    ID              reduce using rule 6 (inmediato -> NUM .)
    WHILE           reduce using rule 6 (inmediato -> NUM .)
    FOR             reduce using rule 6 (inmediato -> NUM .)
    OPUNA           reduce using rule 6 (inmediato -> NUM .)
    RETURN          reduce using rule 6 (inmediato -> NUM .)
    COMENT          reduce using rule 6 (inmediato -> NUM .)
    PRINT           reduce using rule 6 (inmediato -> NUM .)
    FIN             reduce using rule 6 (inmediato -> NUM .)
    IF              reduce using rule 6 (inmediato -> NUM .)
    ELSE            reduce using rule 6 (inmediato -> NUM .)
    $end            reduce using rule 6 (inmediato -> NUM .)
    PARENC          reduce using rule 6 (inmediato -> NUM .)
    COMA            reduce using rule 6 (inmediato -> NUM .)


state 36

    (9) operacion -> operacion1 .

    OPBIN           reduce using rule 9 (operacion -> operacion1 .)
    PROC            reduce using rule 9 (operacion -> operacion1 .)
    VAR             reduce using rule 9 (operacion -> operacion1 .)
    ID              reduce using rule 9 (operacion -> operacion1 .)
    WHILE           reduce using rule 9 (operacion -> operacion1 .)
    FOR             reduce using rule 9 (operacion -> operacion1 .)
    OPUNA           reduce using rule 9 (operacion -> operacion1 .)
    RETURN          reduce using rule 9 (operacion -> operacion1 .)
    COMENT          reduce using rule 9 (operacion -> operacion1 .)
    PRINT           reduce using rule 9 (operacion -> operacion1 .)
    FIN             reduce using rule 9 (operacion -> operacion1 .)
    IF              reduce using rule 9 (operacion -> operacion1 .)
    ELSE            reduce using rule 9 (operacion -> operacion1 .)
    $end            reduce using rule 9 (operacion -> operacion1 .)
    PARENC          reduce using rule 9 (operacion -> operacion1 .)
    COMA            reduce using rule 9 (operacion -> operacion1 .)


state 37

    (11) operacion1 -> PARENA . operacion PARENC
    (9) operacion -> . operacion1
    (10) operacion1 -> . operacion OPBIN operacion
    (11) operacion1 -> . PARENA operacion PARENC
    (12) operacion1 -> . inmediato
    (6) inmediato -> . NUM
    (7) inmediato -> . ID
    (8) inmediato -> . EXPBOOL

    PARENA          shift and go to state 37
    NUM             shift and go to state 35
    ID              shift and go to state 39
    EXPBOOL         shift and go to state 40

    operacion1                     shift and go to state 36
    inmediato                      shift and go to state 38
    operacion                      shift and go to state 52

state 38

    (12) operacion1 -> inmediato .

    OPBIN           reduce using rule 12 (operacion1 -> inmediato .)
    PROC            reduce using rule 12 (operacion1 -> inmediato .)
    VAR             reduce using rule 12 (operacion1 -> inmediato .)
    ID              reduce using rule 12 (operacion1 -> inmediato .)
    WHILE           reduce using rule 12 (operacion1 -> inmediato .)
    FOR             reduce using rule 12 (operacion1 -> inmediato .)
    OPUNA           reduce using rule 12 (operacion1 -> inmediato .)
    RETURN          reduce using rule 12 (operacion1 -> inmediato .)
    COMENT          reduce using rule 12 (operacion1 -> inmediato .)
    PRINT           reduce using rule 12 (operacion1 -> inmediato .)
    FIN             reduce using rule 12 (operacion1 -> inmediato .)
    IF              reduce using rule 12 (operacion1 -> inmediato .)
    ELSE            reduce using rule 12 (operacion1 -> inmediato .)
    $end            reduce using rule 12 (operacion1 -> inmediato .)
    PARENC          reduce using rule 12 (operacion1 -> inmediato .)
    COMA            reduce using rule 12 (operacion1 -> inmediato .)


state 39

    (7) inmediato -> ID .
